# selenium-course

./: Makefile  README.md  example.env  pyproject.toml
tasks/: lesson6_step4_1.py  lesson6_step4_2.py  lesson6_step5.py  lesson6_step6.py  test2.py  testcases.py
timesheet/: config.py  test_timesheet.py
timesheet/pages/: login_page_model.py  project_page_model.py  tracker_page_model.py
timesheet/pages/utils/: utils.py
